# fastapi-todo-list-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
src/: db.py  main.py  migrate_db.py
src/cruds/: task.py  user.py
src/libs/: authenticate.py
src/models/: model.py  task.py  user.py
src/routers/: done.py  task.py  user.py
src/schema/: task.py  user.py
tests/: test_api.py  test_sample.py
