[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.26"
PyMySQL = "^1.0.2"
asyncmy = "^0.2.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
httpx = "^0.21.1"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80